# WaveGuardClient

./: .gitignore  CHANGELOG.md  DEPLOYMENT_TRACKER.md  Dockerfile  LAUNCH_SUBMISSIONS.md  LICENSE  README.md  mcp.json  pyproject.toml  smithery.yaml  test_api.py  test_deployed.py  test_e2e_l1.py  test_mcp.py
.github/workflows/: publish.yml
artifacts/: pypi_release_3.3.0_2026-03-01.md
benchmarks/: benchmark_results.json  benchmark_vs_sklearn.py
docs/: PYPI_RELEASE_CHECKLIST_v3.3.0.md  api-reference.md  azure-migration.md  getting-started.md  mcp-integration.md
examples/: 01_quickstart.py  02_server_monitoring.py  03_log_analysis.py  04_time_series.py  05_azure_migration.py  06_batch_scanning.py  07_error_handling.py  iot_predictive_maintenance.py  mcp_agent_demo.py  network_intrusion_detection.py
mcp_server/: README.md  server.py
scripts/: prepare_pypi_release.ps1
tests/: test_client.py  test_mcp_server.py
waveguard/: __init__.py  client.py  exceptions.py
