[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveguard"
version = "2.0.0"
description = "Python SDK for WaveGuard — physics-based anomaly detection API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Greg Partin"},
]
keywords = [
    "anomaly-detection",
    "api-client",
    "sdk",
    "waveguard",
    "physics-based",
    "mcp",
    "model-context-protocol",
    "azure-migration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Lightweight — only requests needed to talk to the API
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
mcp = [
    "requests>=2.28",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/gpartin/WaveGuardClient"
Documentation = "https://github.com/gpartin/WaveGuardClient/tree/main/docs"
Repository = "https://github.com/gpartin/WaveGuardClient"
Issues = "https://github.com/gpartin/WaveGuardClient/issues"
API = "https://gpartin--waveguard-api-fastapi-app.modal.run/docs"

[tool.setuptools.packages.find]
include = ["waveguard*"]
exclude = ["tests*", "examples*", "docs*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
